--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -7,6 +7,8 @@
   <body>
     <h1>Simpler framework at work!</h1>
 
-    <p><%= @time %></p>
+    <p>ID - <%= @test.id %></p>
+    <p>Title - <%= @test.title %></p>
+    <p>Level - <%= @test.level %></p>
   </body>
 </html>
